--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,13 @@
 ## USER SCRIPTS AND NOTES
 ############################################
 
+avatar*
 /*.bat
 /\!*
 .DS_Store
 *.pdf
 
+*~
 ############################################
 ## LATEX TEMPORARY FILES
 ############################################
